// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating xsd and comparing it to data standard 5.2 authoritative artifacts should have complex types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "AcademicWeek",
  "AccountabilityRating",
  "Assessment",
  "AssessmentAdministration",
  "AssessmentAdministrationParticipation",
  "AssessmentBatteryPart",
  "AssessmentItem",
  "AssessmentScoreRangeLearningStandard",
  "BalanceSheetDimension",
  "BellSchedule",
  "Calendar",
  "CalendarDate",
  "ChartOfAccount",
  "ClassPeriod",
  "Cohort",
  "CommunityOrganization",
  "CommunityProvider",
  "CommunityProviderLicense",
  "CompetencyObjective",
  "Contact",
  "Course",
  "CourseOffering",
  "CourseTranscript",
  "Credential",
  "CrisisEvent",
  "DescriptorMapping",
  "DisciplineAction",
  "DisciplineIncident",
  "EducationContent",
  "EducationOrganization",
  "EducationOrganizationNetwork",
  "EducationServiceCenter",
  "EvaluationRubricDimension",
  "FunctionDimension",
  "FundDimension",
  "Grade",
  "GradebookEntry",
  "GradingPeriod",
  "GraduationPlan",
  "Intervention",
  "InterventionPrescription",
  "InterventionStudy",
  "LearningStandard",
  "LocalAccount",
  "LocalActual",
  "LocalBudget",
  "LocalContractedStaff",
  "LocalEducationAgency",
  "LocalEncumbrance",
  "LocalPayroll",
  "Location",
  "ObjectDimension",
  "ObjectiveAssessment",
  "OpenStaffPosition",
  "OperationalUnitDimension",
  "OrganizationDepartment",
  "Person",
  "PostSecondaryEvent",
  "PostSecondaryInstitution",
  "Program",
  "ProgramDimension",
  "ProgramEvaluation",
  "ProgramEvaluationElement",
  "ProgramEvaluationObjective",
  "ProjectDimension",
  "ReportCard",
  "RestraintEvent",
  "School",
  "Section",
  "SectionAttendanceTakenEvent",
  "Session",
  "SourceDimension",
  "Staff",
  "StaffAbsenceEvent",
  "StaffLeave",
  "StateEducationAgency",
  "Student",
  "StudentAcademicRecord",
  "StudentAssessment",
  "StudentAssessmentRegistration",
  "StudentCompetencyObjective",
  "StudentEducationOrganizationAssessmentAccommodation",
  "StudentGradebookEntry",
  "StudentHealth",
  "StudentInterventionAttendanceEvent",
  "StudentProgramAttendanceEvent",
  "StudentProgramEvaluation",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAttendanceEvent",
  "StudentTransportation",
  "Survey",
  "SurveyQuestion",
  "SurveyQuestionResponse",
  "SurveyResponse",
  "SurveySection",
  "SurveySectionResponse",
  "===== Descriptors =====",
  "AbsenceEventCategoryDescriptor",
  "AcademicHonorCategoryDescriptor",
  "AcademicSubjectDescriptor",
  "AccommodationDescriptor",
  "AccountTypeDescriptor",
  "AchievementCategoryDescriptor",
  "AdditionalCreditTypeDescriptor",
  "AddressTypeDescriptor",
  "AdministrationEnvironmentDescriptor",
  "AdministrativeFundingControlDescriptor",
  "AncestryEthnicOriginDescriptor",
  "AssessmentCategoryDescriptor",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentItemCategoryDescriptor",
  "AssessmentItemResultDescriptor",
  "AssessmentPeriodDescriptor",
  "AssessmentReportingMethodDescriptor",
  "AssignmentLateStatusDescriptor",
  "AttemptStatusDescriptor",
  "AttendanceEventCategoryDescriptor",
  "BarrierToInternetAccessInResidenceDescriptor",
  "BehaviorDescriptor",
  "BusRouteDescriptor",
  "CalendarEventDescriptor",
  "CalendarTypeDescriptor",
  "CareerPathwayDescriptor",
  "CharterApprovalAgencyTypeDescriptor",
  "CharterStatusDescriptor",
  "CitizenshipStatusDescriptor",
  "ClassroomPositionDescriptor",
  "CohortScopeDescriptor",
  "CohortTypeDescriptor",
  "CohortYearTypeDescriptor",
  "CompetencyLevelDescriptor",
  "ContactTypeDescriptor",
  "ContentClassDescriptor",
  "ContinuationOfServicesReasonDescriptor",
  "CostRateDescriptor",
  "CountryDescriptor",
  "CourseAttemptResultDescriptor",
  "CourseDefinedByDescriptor",
  "CourseGPAApplicabilityDescriptor",
  "CourseIdentificationSystemDescriptor",
  "CourseLevelCharacteristicDescriptor",
  "CourseRepeatCodeDescriptor",
  "CredentialFieldDescriptor",
  "CredentialTypeDescriptor",
  "CreditCategoryDescriptor",
  "CreditTypeDescriptor",
  "CrisisTypeDescriptor",
  "CTEProgramServiceDescriptor",
  "CurriculumUsedDescriptor",
  "DeliveryMethodDescriptor",
  "DiagnosisDescriptor",
  "DiplomaLevelDescriptor",
  "DiplomaTypeDescriptor",
  "DisabilityDescriptor",
  "DisabilityDesignationDescriptor",
  "DisabilityDeterminationSourceTypeDescriptor",
  "DisciplineActionLengthDifferenceReasonDescriptor",
  "DisciplineDescriptor",
  "DisciplineIncidentParticipationCodeDescriptor",
  "DisplacedStudentStatusDescriptor",
  "DualCreditInstitutionDescriptor",
  "DualCreditTypeDescriptor",
  "EducationalEnvironmentDescriptor",
  "EducationOrganizationAssociationTypeDescriptor",
  "EducationOrganizationCategoryDescriptor",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EducationPlanDescriptor",
  "ElectronicMailTypeDescriptor",
  "EligibilityDelayReasonDescriptor",
  "EligibilityEvaluationTypeDescriptor",
  "EmploymentStatusDescriptor",
  "EnrollmentTypeDescriptor",
  "EntryGradeLevelReasonDescriptor",
  "EntryTypeDescriptor",
  "EvaluationDelayReasonDescriptor",
  "EventCircumstanceDescriptor",
  "ExitWithdrawTypeDescriptor",
  "FinancialCollectionDescriptor",
  "GradebookEntryTypeDescriptor",
  "GradeLevelDescriptor",
  "GradePointAverageTypeDescriptor",
  "GradeTypeDescriptor",
  "GradingPeriodDescriptor",
  "GraduationPlanTypeDescriptor",
  "GunFreeSchoolsActReportingStatusDescriptor",
  "HomelessPrimaryNighttimeResidenceDescriptor",
  "HomelessProgramServiceDescriptor",
  "IDEAPartDescriptor",
  "IdentificationDocumentUseDescriptor",
  "ImmunizationTypeDescriptor",
  "IncidentLocationDescriptor",
  "IndicatorDescriptor",
  "IndicatorGroupDescriptor",
  "IndicatorLevelDescriptor",
  "InstitutionTelephoneNumberTypeDescriptor",
  "InteractivityStyleDescriptor",
  "InternetAccessDescriptor",
  "InternetAccessTypeInResidenceDescriptor",
  "InternetPerformanceInResidenceDescriptor",
  "InterventionClassDescriptor",
  "InterventionEffectivenessRatingDescriptor",
  "LanguageDescriptor",
  "LanguageInstructionProgramServiceDescriptor",
  "LanguageUseDescriptor",
  "LearningStandardCategoryDescriptor",
  "LearningStandardEquivalenceStrengthDescriptor",
  "LearningStandardScopeDescriptor",
  "LevelOfEducationDescriptor",
  "LicenseStatusDescriptor",
  "LicenseTypeDescriptor",
  "LimitedEnglishProficiencyDescriptor",
  "LocaleDescriptor",
  "LocalEducationAgencyCategoryDescriptor",
  "MagnetSpecialProgramEmphasisSchoolDescriptor",
  "MediumOfInstructionDescriptor",
  "MethodCreditEarnedDescriptor",
  "MigrantEducationProgramServiceDescriptor",
  "ModelEntityDescriptor",
  "MonitoredDescriptor",
  "NeglectedOrDelinquentProgramDescriptor",
  "NeglectedOrDelinquentProgramServiceDescriptor",
  "NetworkPurposeDescriptor",
  "NonMedicalImmunizationExemptionDescriptor",
  "OperationalStatusDescriptor",
  "OtherNameTypeDescriptor",
  "ParticipationDescriptor",
  "ParticipationStatusDescriptor",
  "PerformanceBaseConversionDescriptor",
  "PerformanceLevelDescriptor",
  "PersonalInformationVerificationDescriptor",
  "PlatformTypeDescriptor",
  "PopulationServedDescriptor",
  "PostingResultDescriptor",
  "PostSecondaryEventCategoryDescriptor",
  "PostSecondaryInstitutionLevelDescriptor",
  "PrimaryLearningDeviceAccessDescriptor",
  "PrimaryLearningDeviceAwayFromSchoolDescriptor",
  "PrimaryLearningDeviceProviderDescriptor",
  "ProficiencyDescriptor",
  "ProgramAssignmentDescriptor",
  "ProgramCharacteristicDescriptor",
  "ProgramEvaluationPeriodDescriptor",
  "ProgramEvaluationTypeDescriptor",
  "ProgramSponsorDescriptor",
  "ProgramTypeDescriptor",
  "ProgressDescriptor",
  "ProgressLevelDescriptor",
  "ProviderCategoryDescriptor",
  "ProviderProfitabilityDescriptor",
  "ProviderStatusDescriptor",
  "PublicationStatusDescriptor",
  "QuestionFormDescriptor",
  "RaceDescriptor",
  "RatingLevelDescriptor",
  "ReasonExitedDescriptor",
  "ReasonNotTestedDescriptor",
  "RecognitionTypeDescriptor",
  "RelationDescriptor",
  "RepeatIdentifierDescriptor",
  "ReporterDescriptionDescriptor",
  "ReportingTagDescriptor",
  "ResidencyStatusDescriptor",
  "ResponseIndicatorDescriptor",
  "ResponsibilityDescriptor",
  "RestraintEventReasonDescriptor",
  "ResultDatatypeTypeDescriptor",
  "RetestIndicatorDescriptor",
  "SchoolCategoryDescriptor",
  "SchoolChoiceBasisDescriptor",
  "SchoolChoiceImplementStatusDescriptor",
  "SchoolFoodServiceProgramServiceDescriptor",
  "SchoolTypeDescriptor",
  "Section504DisabilityDescriptor",
  "SectionCharacteristicDescriptor",
  "SectionTypeDescriptor",
  "SeparationDescriptor",
  "SeparationReasonDescriptor",
  "ServiceDescriptor",
  "SexDescriptor",
  "SourceSystemDescriptor",
  "SpecialEducationExitReasonDescriptor",
  "SpecialEducationProgramServiceDescriptor",
  "SpecialEducationSettingDescriptor",
  "StaffClassificationDescriptor",
  "StaffIdentificationSystemDescriptor",
  "StaffLeaveEventCategoryDescriptor",
  "StateAbbreviationDescriptor",
  "StudentCharacteristicDescriptor",
  "StudentIdentificationSystemDescriptor",
  "SubmissionStatusDescriptor",
  "SupporterMilitaryConnectionDescriptor",
  "SurveyCategoryDescriptor",
  "SurveyLevelDescriptor",
  "TeachingCredentialBasisDescriptor",
  "TeachingCredentialDescriptor",
  "TechnicalSkillsAssessmentDescriptor",
  "TelephoneNumberTypeDescriptor",
  "TermDescriptor",
  "TitleIPartAParticipantDescriptor",
  "TitleIPartAProgramServiceDescriptor",
  "TitleIPartASchoolDesignationDescriptor",
  "TransportationPublicExpenseEligibilityTypeDescriptor",
  "TransportationTypeDescriptor",
  "TravelDayofWeekDescriptor",
  "TravelDirectionDescriptor",
  "TribalAffiliationDescriptor",
  "VisaDescriptor",
  "WeaponDescriptor",
  "===== Associations =====",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "FeederSchoolAssociation",
  "GeneralStudentProgramAssociation",
  "LearningStandardEquivalenceAssociation",
  "StaffCohortAssociation",
  "StaffDisciplineIncidentAssociation",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationContactAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffProgramAssociation",
  "StaffSchoolAssociation",
  "StaffSectionAssociation",
  "StudentAssessmentEducationOrganizationAssociation",
  "StudentAssessmentRegistrationBatteryPartAssociation",
  "StudentCohortAssociation",
  "StudentContactAssociation",
  "StudentCTEProgramAssociation",
  "StudentDisciplineIncidentBehaviorAssociation",
  "StudentDisciplineIncidentNonOffenderAssociation",
  "StudentEducationOrganizationAssociation",
  "StudentEducationOrganizationResponsibilityAssociation",
  "StudentHomelessProgramAssociation",
  "StudentInterventionAssociation",
  "StudentLanguageInstructionProgramAssociation",
  "StudentMigrantEducationProgramAssociation",
  "StudentNeglectedOrDelinquentProgramAssociation",
  "StudentProgramAssociation",
  "StudentSchoolAssociation",
  "StudentSchoolFoodServiceProgramAssociation",
  "StudentSection504ProgramAssociation",
  "StudentSectionAssociation",
  "StudentSpecialEducationProgramAssociation",
  "StudentSpecialEducationProgramEligibilityAssociation",
  "StudentTitleIPartAProgramAssociation",
  "SurveyCourseAssociation",
  "SurveyProgramAssociation",
  "SurveyResponseEducationOrganizationTargetAssociation",
  "SurveyResponseStaffTargetAssociation",
  "SurveySectionAssociation",
  "SurveySectionResponseEducationOrganizationTargetAssociation",
  "SurveySectionResponseStaffTargetAssociation",
  "===== Base Types (borrowed from NEIM standards) =====",
  "ComplexObjectType",
  "DescriptorType",
  "ReferenceType",
  "===== Extended Reference Types =====",
  "AcademicWeekIdentityType",
  "AcademicWeekReferenceType",
  "AccountabilityRatingIdentityType",
  "AccountabilityRatingReferenceType",
  "AssessmentAdministrationIdentityType",
  "AssessmentAdministrationParticipationIdentityType",
  "AssessmentAdministrationParticipationReferenceType",
  "AssessmentAdministrationReferenceType",
  "AssessmentBatteryPartIdentityType",
  "AssessmentBatteryPartReferenceType",
  "AssessmentIdentityType",
  "AssessmentItemIdentityType",
  "AssessmentItemReferenceType",
  "AssessmentLookupType",
  "AssessmentReferenceType",
  "AssessmentScoreRangeLearningStandardIdentityType",
  "AssessmentScoreRangeLearningStandardReferenceType",
  "BalanceSheetDimensionIdentityType",
  "BalanceSheetDimensionReferenceType",
  "BellScheduleIdentityType",
  "BellScheduleReferenceType",
  "CalendarDateIdentityType",
  "CalendarDateReferenceType",
  "CalendarIdentityType",
  "CalendarReferenceType",
  "ChartOfAccountIdentityType",
  "ChartOfAccountReferenceType",
  "ClassPeriodIdentityType",
  "ClassPeriodReferenceType",
  "CohortIdentityType",
  "CohortReferenceType",
  "CommunityOrganizationIdentityType",
  "CommunityOrganizationReferenceType",
  "CommunityProviderIdentityType",
  "CommunityProviderLicenseIdentityType",
  "CommunityProviderLicenseReferenceType",
  "CommunityProviderReferenceType",
  "CompetencyObjectiveIdentityType",
  "CompetencyObjectiveReferenceType",
  "ContactIdentityType",
  "ContactReferenceType",
  "CourseIdentityType",
  "CourseLookupType",
  "CourseOfferingIdentityType",
  "CourseOfferingReferenceType",
  "CourseReferenceType",
  "CourseTranscriptIdentityType",
  "CourseTranscriptReferenceType",
  "CredentialIdentityType",
  "CredentialReferenceType",
  "CrisisEventIdentityType",
  "CrisisEventReferenceType",
  "DescriptorMappingIdentityType",
  "DescriptorMappingReferenceType",
  "DisciplineActionIdentityType",
  "DisciplineActionReferenceType",
  "DisciplineIncidentIdentityType",
  "DisciplineIncidentReferenceType",
  "EducationContentIdentityType",
  "EducationContentReferenceType",
  "EducationOrganizationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationReferenceType",
  "EducationOrganizationLookupType",
  "EducationOrganizationNetworkAssociationIdentityType",
  "EducationOrganizationNetworkAssociationReferenceType",
  "EducationOrganizationNetworkIdentityType",
  "EducationOrganizationNetworkLookupType",
  "EducationOrganizationNetworkReferenceType",
  "EducationOrganizationPeerAssociationIdentityType",
  "EducationOrganizationPeerAssociationReferenceType",
  "EducationOrganizationReferenceType",
  "EducationServiceCenterIdentityType",
  "EducationServiceCenterLookupType",
  "EducationServiceCenterReferenceType",
  "EvaluationRubricDimensionIdentityType",
  "EvaluationRubricDimensionReferenceType",
  "FeederSchoolAssociationIdentityType",
  "FeederSchoolAssociationReferenceType",
  "FunctionDimensionIdentityType",
  "FunctionDimensionReferenceType",
  "FundDimensionIdentityType",
  "FundDimensionReferenceType",
  "GeneralStudentProgramAssociationIdentityType",
  "GeneralStudentProgramAssociationReferenceType",
  "GradebookEntryIdentityType",
  "GradebookEntryLookupType",
  "GradebookEntryReferenceType",
  "GradeIdentityType",
  "GradeReferenceType",
  "GradingPeriodIdentityType",
  "GradingPeriodReferenceType",
  "GraduationPlanIdentityType",
  "GraduationPlanReferenceType",
  "InterventionIdentityType",
  "InterventionPrescriptionIdentityType",
  "InterventionPrescriptionReferenceType",
  "InterventionReferenceType",
  "InterventionStudyIdentityType",
  "InterventionStudyReferenceType",
  "LearningStandardEquivalenceAssociationIdentityType",
  "LearningStandardEquivalenceAssociationReferenceType",
  "LearningStandardIdentityType",
  "LearningStandardLookupType",
  "LearningStandardReferenceType",
  "LocalAccountIdentityType",
  "LocalAccountReferenceType",
  "LocalActualIdentityType",
  "LocalActualReferenceType",
  "LocalBudgetIdentityType",
  "LocalBudgetReferenceType",
  "LocalContractedStaffIdentityType",
  "LocalContractedStaffReferenceType",
  "LocalEducationAgencyIdentityType",
  "LocalEducationAgencyLookupType",
  "LocalEducationAgencyReferenceType",
  "LocalEncumbranceIdentityType",
  "LocalEncumbranceReferenceType",
  "LocalPayrollIdentityType",
  "LocalPayrollReferenceType",
  "LocationIdentityType",
  "LocationReferenceType",
  "ObjectDimensionIdentityType",
  "ObjectDimensionReferenceType",
  "ObjectiveAssessmentIdentityType",
  "ObjectiveAssessmentReferenceType",
  "OpenStaffPositionIdentityType",
  "OpenStaffPositionReferenceType",
  "OperationalUnitDimensionIdentityType",
  "OperationalUnitDimensionReferenceType",
  "OrganizationDepartmentIdentityType",
  "OrganizationDepartmentReferenceType",
  "PersonIdentityType",
  "PersonReferenceType",
  "PostSecondaryEventIdentityType",
  "PostSecondaryEventReferenceType",
  "PostSecondaryInstitutionIdentityType",
  "PostSecondaryInstitutionReferenceType",
  "ProgramDimensionIdentityType",
  "ProgramDimensionReferenceType",
  "ProgramEvaluationElementIdentityType",
  "ProgramEvaluationElementReferenceType",
  "ProgramEvaluationIdentityType",
  "ProgramEvaluationObjectiveIdentityType",
  "ProgramEvaluationObjectiveReferenceType",
  "ProgramEvaluationReferenceType",
  "ProgramIdentityType",
  "ProgramLookupType",
  "ProgramReferenceType",
  "ProjectDimensionIdentityType",
  "ProjectDimensionReferenceType",
  "ReportCardIdentityType",
  "ReportCardReferenceType",
  "RestraintEventIdentityType",
  "RestraintEventReferenceType",
  "SchoolIdentityType",
  "SchoolLookupType",
  "SchoolReferenceType",
  "SectionAttendanceTakenEventIdentityType",
  "SectionAttendanceTakenEventReferenceType",
  "SectionIdentityType",
  "SectionLookupType",
  "SectionReferenceType",
  "SessionIdentityType",
  "SessionLookupType",
  "SessionReferenceType",
  "SourceDimensionIdentityType",
  "SourceDimensionReferenceType",
  "StaffAbsenceEventIdentityType",
  "StaffAbsenceEventReferenceType",
  "StaffCohortAssociationIdentityType",
  "StaffCohortAssociationReferenceType",
  "StaffDisciplineIncidentAssociationIdentityType",
  "StaffDisciplineIncidentAssociationReferenceType",
  "StaffEducationOrganizationAssignmentAssociationIdentityType",
  "StaffEducationOrganizationAssignmentAssociationReferenceType",
  "StaffEducationOrganizationContactAssociationIdentityType",
  "StaffEducationOrganizationContactAssociationReferenceType",
  "StaffEducationOrganizationEmploymentAssociationIdentityType",
  "StaffEducationOrganizationEmploymentAssociationReferenceType",
  "StaffIdentityType",
  "StaffLeaveIdentityType",
  "StaffLeaveReferenceType",
  "StaffLookupType",
  "StaffProgramAssociationIdentityType",
  "StaffProgramAssociationReferenceType",
  "StaffReferenceType",
  "StaffSchoolAssociationIdentityType",
  "StaffSchoolAssociationReferenceType",
  "StaffSectionAssociationIdentityType",
  "StaffSectionAssociationReferenceType",
  "StateEducationAgencyIdentityType",
  "StateEducationAgencyLookupType",
  "StateEducationAgencyReferenceType",
  "StudentAcademicRecordIdentityType",
  "StudentAcademicRecordReferenceType",
  "StudentAssessmentEducationOrganizationAssociationIdentityType",
  "StudentAssessmentEducationOrganizationAssociationReferenceType",
  "StudentAssessmentIdentityType",
  "StudentAssessmentReferenceType",
  "StudentAssessmentRegistrationBatteryPartAssociationIdentityType",
  "StudentAssessmentRegistrationBatteryPartAssociationReferenceType",
  "StudentAssessmentRegistrationIdentityType",
  "StudentAssessmentRegistrationReferenceType",
  "StudentCohortAssociationIdentityType",
  "StudentCohortAssociationReferenceType",
  "StudentCompetencyObjectiveIdentityType",
  "StudentCompetencyObjectiveReferenceType",
  "StudentContactAssociationIdentityType",
  "StudentContactAssociationReferenceType",
  "StudentCTEProgramAssociationIdentityType",
  "StudentCTEProgramAssociationReferenceType",
  "StudentDisciplineIncidentBehaviorAssociationIdentityType",
  "StudentDisciplineIncidentBehaviorAssociationReferenceType",
  "StudentDisciplineIncidentNonOffenderAssociationIdentityType",
  "StudentDisciplineIncidentNonOffenderAssociationReferenceType",
  "StudentEducationOrganizationAssessmentAccommodationIdentityType",
  "StudentEducationOrganizationAssessmentAccommodationReferenceType",
  "StudentEducationOrganizationAssociationIdentityType",
  "StudentEducationOrganizationAssociationReferenceType",
  "StudentEducationOrganizationResponsibilityAssociationIdentityType",
  "StudentEducationOrganizationResponsibilityAssociationReferenceType",
  "StudentGradebookEntryIdentityType",
  "StudentGradebookEntryReferenceType",
  "StudentHealthIdentityType",
  "StudentHealthReferenceType",
  "StudentHomelessProgramAssociationIdentityType",
  "StudentHomelessProgramAssociationReferenceType",
  "StudentIdentityType",
  "StudentInterventionAssociationIdentityType",
  "StudentInterventionAssociationReferenceType",
  "StudentInterventionAttendanceEventIdentityType",
  "StudentInterventionAttendanceEventReferenceType",
  "StudentLanguageInstructionProgramAssociationIdentityType",
  "StudentLanguageInstructionProgramAssociationReferenceType",
  "StudentLookupType",
  "StudentMigrantEducationProgramAssociationIdentityType",
  "StudentMigrantEducationProgramAssociationReferenceType",
  "StudentNeglectedOrDelinquentProgramAssociationIdentityType",
  "StudentNeglectedOrDelinquentProgramAssociationReferenceType",
  "StudentProgramAssociationIdentityType",
  "StudentProgramAssociationReferenceType",
  "StudentProgramAttendanceEventIdentityType",
  "StudentProgramAttendanceEventReferenceType",
  "StudentProgramEvaluationIdentityType",
  "StudentProgramEvaluationReferenceType",
  "StudentReferenceType",
  "StudentSchoolAssociationIdentityType",
  "StudentSchoolAssociationReferenceType",
  "StudentSchoolAttendanceEventIdentityType",
  "StudentSchoolAttendanceEventReferenceType",
  "StudentSchoolFoodServiceProgramAssociationIdentityType",
  "StudentSchoolFoodServiceProgramAssociationReferenceType",
  "StudentSection504ProgramAssociationIdentityType",
  "StudentSection504ProgramAssociationReferenceType",
  "StudentSectionAssociationIdentityType",
  "StudentSectionAssociationReferenceType",
  "StudentSectionAttendanceEventIdentityType",
  "StudentSectionAttendanceEventReferenceType",
  "StudentSpecialEducationProgramAssociationIdentityType",
  "StudentSpecialEducationProgramAssociationReferenceType",
  "StudentSpecialEducationProgramEligibilityAssociationIdentityType",
  "StudentSpecialEducationProgramEligibilityAssociationReferenceType",
  "StudentTitleIPartAProgramAssociationIdentityType",
  "StudentTitleIPartAProgramAssociationReferenceType",
  "StudentTransportationIdentityType",
  "StudentTransportationReferenceType",
  "SurveyCourseAssociationIdentityType",
  "SurveyCourseAssociationReferenceType",
  "SurveyIdentityType",
  "SurveyProgramAssociationIdentityType",
  "SurveyProgramAssociationReferenceType",
  "SurveyQuestionIdentityType",
  "SurveyQuestionReferenceType",
  "SurveyQuestionResponseIdentityType",
  "SurveyQuestionResponseReferenceType",
  "SurveyReferenceType",
  "SurveyResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveyResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveyResponseIdentityType",
  "SurveyResponseReferenceType",
  "SurveyResponseStaffTargetAssociationIdentityType",
  "SurveyResponseStaffTargetAssociationReferenceType",
  "SurveySectionAssociationIdentityType",
  "SurveySectionAssociationReferenceType",
  "SurveySectionIdentityType",
  "SurveySectionReferenceType",
  "SurveySectionResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveySectionResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveySectionResponseIdentityType",
  "SurveySectionResponseReferenceType",
  "SurveySectionResponseStaffTargetAssociationIdentityType",
  "SurveySectionResponseStaffTargetAssociationReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "AcademicHonor",
  "Achievement",
  "AdditionalCredits",
  "AdditionalImmunization",
  "Address",
  "AdministrationPointOfContact",
  "AssessmentCustomization",
  "AssessmentIdentificationCode",
  "AssessmentPerformanceLevel",
  "AssessmentPeriod",
  "AssessmentScore",
  "AttendanceEvent",
  "Behavior",
  "BirthData",
  "Citizenship",
  "ClassRanking",
  "CohortYear",
  "ContentStandard",
  "CourseIdentificationCode",
  "Credits",
  "CreditsByCourse",
  "CreditsByCreditCategory",
  "CreditsBySubject",
  "CTEProgramService",
  "Diploma",
  "Disability",
  "DisciplineIncidentExternalParticipant",
  "DisplacedStudent",
  "DualCredit",
  "EducationContentSource",
  "EducationOrganizationIdentificationCode",
  "EducationOrganizationIndicator",
  "ElectronicMail",
  "EmploymentPeriod",
  "EnglishLanguageProficiencyAssessment",
  "GradePointAverage",
  "HomelessProgramService",
  "IdentificationDocument",
  "InstitutionTelephone",
  "InternationalAddress",
  "InterventionEffectiveness",
  "Language",
  "LanguageInstructionProgramService",
  "LearningResource",
  "LearningStandardGrade",
  "LearningStandardIdentificationCode",
  "License",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyFederalFunds",
  "Matrix",
  "MeetingTime",
  "MigrantEducationProgramService",
  "Name",
  "NeglectedOrDelinquentProgramService",
  "OtherName",
  "PartialCourseTranscriptAwards",
  "PerformanceLevel",
  "Period",
  "PossibleResponse",
  "ProgramEvaluationLevel",
  "ProgramParticipationStatus",
  "Recognition",
  "ReportingTag",
  "RequiredAssessment",
  "RequiredImmunization",
  "ResponseChoice",
  "SchoolFoodServiceProgramService",
  "ScoreResult",
  "Service",
  "ServiceProvider",
  "SpecialEducationProgramService",
  "StaffIdentificationCode",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "StudentAssessmentItem",
  "StudentBusDetails",
  "StudentCharacteristic",
  "StudentEvaluationElement",
  "StudentEvaluationObjective",
  "StudentIdentificationCode",
  "StudentIndicator",
  "StudentObjectiveAssessment",
  "SurveyQuestionMatrixElementResponse",
  "SurveyQuestionResponseValue",
  "Telephone",
  "TitleIPartAProgramService",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
]
`;

exports[`when generating xsd and comparing it to data standard 5.2 authoritative artifacts should have core with no differences 1`] = `""`;

exports[`when generating xsd and comparing it to data standard 5.2 authoritative artifacts should have schema annotation with no differences 1`] = `
" 1 file changed, 3 deletions(-)
"
`;

exports[`when generating xsd and comparing it to data standard 5.2 authoritative artifacts should have simple types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Base Types (borrowed from NEIM standards) =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "AbsenceEventCategoryDescriptorReferenceType",
  "AcademicHonorCategoryDescriptorReferenceType",
  "AcademicSubjectDescriptorReferenceType",
  "AccommodationDescriptorReferenceType",
  "AccountTypeDescriptorReferenceType",
  "AchievementCategoryDescriptorReferenceType",
  "AdditionalCreditTypeDescriptorReferenceType",
  "AddressTypeDescriptorReferenceType",
  "AdministrationEnvironmentDescriptorReferenceType",
  "AdministrativeFundingControlDescriptorReferenceType",
  "AncestryEthnicOriginDescriptorReferenceType",
  "AssessmentCategoryDescriptorReferenceType",
  "AssessmentIdentificationSystemDescriptorReferenceType",
  "AssessmentItemCategoryDescriptorReferenceType",
  "AssessmentItemResultDescriptorReferenceType",
  "AssessmentPeriodDescriptorReferenceType",
  "AssessmentReportingMethodDescriptorReferenceType",
  "AssignmentLateStatusDescriptorReferenceType",
  "AttemptStatusDescriptorReferenceType",
  "AttendanceEventCategoryDescriptorReferenceType",
  "BarrierToInternetAccessInResidenceDescriptorReferenceType",
  "BehaviorDescriptorReferenceType",
  "BusRouteDescriptorReferenceType",
  "CalendarEventDescriptorReferenceType",
  "CalendarTypeDescriptorReferenceType",
  "CareerPathwayDescriptorReferenceType",
  "CharterApprovalAgencyTypeDescriptorReferenceType",
  "CharterStatusDescriptorReferenceType",
  "CitizenshipStatusDescriptorReferenceType",
  "ClassroomPositionDescriptorReferenceType",
  "CohortScopeDescriptorReferenceType",
  "CohortTypeDescriptorReferenceType",
  "CohortYearTypeDescriptorReferenceType",
  "CompetencyLevelDescriptorReferenceType",
  "ContactTypeDescriptorReferenceType",
  "ContentClassDescriptorReferenceType",
  "ContinuationOfServicesReasonDescriptorReferenceType",
  "CostRateDescriptorReferenceType",
  "CountryDescriptorReferenceType",
  "CourseAttemptResultDescriptorReferenceType",
  "CourseDefinedByDescriptorReferenceType",
  "CourseGPAApplicabilityDescriptorReferenceType",
  "CourseIdentificationSystemDescriptorReferenceType",
  "CourseLevelCharacteristicDescriptorReferenceType",
  "CourseRepeatCodeDescriptorReferenceType",
  "CredentialFieldDescriptorReferenceType",
  "CredentialTypeDescriptorReferenceType",
  "CreditCategoryDescriptorReferenceType",
  "CreditTypeDescriptorReferenceType",
  "CrisisTypeDescriptorReferenceType",
  "CTEProgramServiceDescriptorReferenceType",
  "CurriculumUsedDescriptorReferenceType",
  "DeliveryMethodDescriptorReferenceType",
  "DiagnosisDescriptorReferenceType",
  "DiplomaLevelDescriptorReferenceType",
  "DiplomaTypeDescriptorReferenceType",
  "DisabilityDescriptorReferenceType",
  "DisabilityDesignationDescriptorReferenceType",
  "DisabilityDeterminationSourceTypeDescriptorReferenceType",
  "DisciplineActionLengthDifferenceReasonDescriptorReferenceType",
  "DisciplineDescriptorReferenceType",
  "DisciplineIncidentParticipationCodeDescriptorReferenceType",
  "DisplacedStudentStatusDescriptorReferenceType",
  "DualCreditInstitutionDescriptorReferenceType",
  "DualCreditTypeDescriptorReferenceType",
  "EducationalEnvironmentDescriptorReferenceType",
  "EducationOrganizationAssociationTypeDescriptorReferenceType",
  "EducationOrganizationCategoryDescriptorReferenceType",
  "EducationOrganizationIdentificationSystemDescriptorReferenceType",
  "EducationPlanDescriptorReferenceType",
  "ElectronicMailTypeDescriptorReferenceType",
  "EligibilityDelayReasonDescriptorReferenceType",
  "EligibilityEvaluationTypeDescriptorReferenceType",
  "EmploymentStatusDescriptorReferenceType",
  "EnrollmentTypeDescriptorReferenceType",
  "EntryGradeLevelReasonDescriptorReferenceType",
  "EntryTypeDescriptorReferenceType",
  "EvaluationDelayReasonDescriptorReferenceType",
  "EventCircumstanceDescriptorReferenceType",
  "ExitWithdrawTypeDescriptorReferenceType",
  "FinancialCollectionDescriptorReferenceType",
  "GradebookEntryTypeDescriptorReferenceType",
  "GradeLevelDescriptorReferenceType",
  "GradePointAverageTypeDescriptorReferenceType",
  "GradeTypeDescriptorReferenceType",
  "GradingPeriodDescriptorReferenceType",
  "GraduationPlanTypeDescriptorReferenceType",
  "GunFreeSchoolsActReportingStatusDescriptorReferenceType",
  "HomelessPrimaryNighttimeResidenceDescriptorReferenceType",
  "HomelessProgramServiceDescriptorReferenceType",
  "IDEAPartDescriptorReferenceType",
  "IdentificationDocumentUseDescriptorReferenceType",
  "ImmunizationTypeDescriptorReferenceType",
  "IncidentLocationDescriptorReferenceType",
  "IndicatorDescriptorReferenceType",
  "IndicatorGroupDescriptorReferenceType",
  "IndicatorLevelDescriptorReferenceType",
  "InstitutionTelephoneNumberTypeDescriptorReferenceType",
  "InteractivityStyleDescriptorReferenceType",
  "InternetAccessDescriptorReferenceType",
  "InternetAccessTypeInResidenceDescriptorReferenceType",
  "InternetPerformanceInResidenceDescriptorReferenceType",
  "InterventionClassDescriptorReferenceType",
  "InterventionEffectivenessRatingDescriptorReferenceType",
  "LanguageDescriptorReferenceType",
  "LanguageInstructionProgramServiceDescriptorReferenceType",
  "LanguageUseDescriptorReferenceType",
  "LearningStandardCategoryDescriptorReferenceType",
  "LearningStandardEquivalenceStrengthDescriptorReferenceType",
  "LearningStandardScopeDescriptorReferenceType",
  "LevelOfEducationDescriptorReferenceType",
  "LicenseStatusDescriptorReferenceType",
  "LicenseTypeDescriptorReferenceType",
  "LimitedEnglishProficiencyDescriptorReferenceType",
  "LocaleDescriptorReferenceType",
  "LocalEducationAgencyCategoryDescriptorReferenceType",
  "MagnetSpecialProgramEmphasisSchoolDescriptorReferenceType",
  "MediumOfInstructionDescriptorReferenceType",
  "MethodCreditEarnedDescriptorReferenceType",
  "MigrantEducationProgramServiceDescriptorReferenceType",
  "ModelEntityDescriptorReferenceType",
  "MonitoredDescriptorReferenceType",
  "NeglectedOrDelinquentProgramDescriptorReferenceType",
  "NeglectedOrDelinquentProgramServiceDescriptorReferenceType",
  "NetworkPurposeDescriptorReferenceType",
  "NonMedicalImmunizationExemptionDescriptorReferenceType",
  "OperationalStatusDescriptorReferenceType",
  "OtherNameTypeDescriptorReferenceType",
  "ParticipationDescriptorReferenceType",
  "ParticipationStatusDescriptorReferenceType",
  "PerformanceBaseConversionDescriptorReferenceType",
  "PerformanceLevelDescriptorReferenceType",
  "PersonalInformationVerificationDescriptorReferenceType",
  "PlatformTypeDescriptorReferenceType",
  "PopulationServedDescriptorReferenceType",
  "PostingResultDescriptorReferenceType",
  "PostSecondaryEventCategoryDescriptorReferenceType",
  "PostSecondaryInstitutionLevelDescriptorReferenceType",
  "PrimaryLearningDeviceAccessDescriptorReferenceType",
  "PrimaryLearningDeviceAwayFromSchoolDescriptorReferenceType",
  "PrimaryLearningDeviceProviderDescriptorReferenceType",
  "ProficiencyDescriptorReferenceType",
  "ProgramAssignmentDescriptorReferenceType",
  "ProgramCharacteristicDescriptorReferenceType",
  "ProgramEvaluationPeriodDescriptorReferenceType",
  "ProgramEvaluationTypeDescriptorReferenceType",
  "ProgramSponsorDescriptorReferenceType",
  "ProgramTypeDescriptorReferenceType",
  "ProgressDescriptorReferenceType",
  "ProgressLevelDescriptorReferenceType",
  "ProviderCategoryDescriptorReferenceType",
  "ProviderProfitabilityDescriptorReferenceType",
  "ProviderStatusDescriptorReferenceType",
  "PublicationStatusDescriptorReferenceType",
  "QuestionFormDescriptorReferenceType",
  "RaceDescriptorReferenceType",
  "RatingLevelDescriptorReferenceType",
  "ReasonExitedDescriptorReferenceType",
  "ReasonNotTestedDescriptorReferenceType",
  "RecognitionTypeDescriptorReferenceType",
  "RelationDescriptorReferenceType",
  "RepeatIdentifierDescriptorReferenceType",
  "ReporterDescriptionDescriptorReferenceType",
  "ReportingTagDescriptorReferenceType",
  "ResidencyStatusDescriptorReferenceType",
  "ResponseIndicatorDescriptorReferenceType",
  "ResponsibilityDescriptorReferenceType",
  "RestraintEventReasonDescriptorReferenceType",
  "ResultDatatypeTypeDescriptorReferenceType",
  "RetestIndicatorDescriptorReferenceType",
  "SchoolCategoryDescriptorReferenceType",
  "SchoolChoiceBasisDescriptorReferenceType",
  "SchoolChoiceImplementStatusDescriptorReferenceType",
  "SchoolFoodServiceProgramServiceDescriptorReferenceType",
  "SchoolTypeDescriptorReferenceType",
  "Section504DisabilityDescriptorReferenceType",
  "SectionCharacteristicDescriptorReferenceType",
  "SectionTypeDescriptorReferenceType",
  "SeparationDescriptorReferenceType",
  "SeparationReasonDescriptorReferenceType",
  "ServiceDescriptorReferenceType",
  "SexDescriptorReferenceType",
  "SourceSystemDescriptorReferenceType",
  "SpecialEducationExitReasonDescriptorReferenceType",
  "SpecialEducationProgramServiceDescriptorReferenceType",
  "SpecialEducationSettingDescriptorReferenceType",
  "StaffClassificationDescriptorReferenceType",
  "StaffIdentificationSystemDescriptorReferenceType",
  "StaffLeaveEventCategoryDescriptorReferenceType",
  "StateAbbreviationDescriptorReferenceType",
  "StudentCharacteristicDescriptorReferenceType",
  "StudentIdentificationSystemDescriptorReferenceType",
  "SubmissionStatusDescriptorReferenceType",
  "SupporterMilitaryConnectionDescriptorReferenceType",
  "SurveyCategoryDescriptorReferenceType",
  "SurveyLevelDescriptorReferenceType",
  "TeachingCredentialBasisDescriptorReferenceType",
  "TeachingCredentialDescriptorReferenceType",
  "TechnicalSkillsAssessmentDescriptorReferenceType",
  "TelephoneNumberTypeDescriptorReferenceType",
  "TermDescriptorReferenceType",
  "TitleIPartAParticipantDescriptorReferenceType",
  "TitleIPartAProgramServiceDescriptorReferenceType",
  "TitleIPartASchoolDesignationDescriptorReferenceType",
  "TransportationPublicExpenseEligibilityTypeDescriptorReferenceType",
  "TransportationTypeDescriptorReferenceType",
  "TravelDayofWeekDescriptorReferenceType",
  "TravelDirectionDescriptorReferenceType",
  "TribalAffiliationDescriptorReferenceType",
  "VisaDescriptorReferenceType",
  "WeaponDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "SchoolYearType",
  "===== String Simple Types =====",
  "AccountIdentifier",
  "AccountName",
  "AchievementCategorySystem",
  "AchievementTitle",
  "AddressLine",
  "AdministrationIdentifier",
  "AlternateDayName",
  "ApartmentRoomSuiteNumber",
  "AssessmentBatteryPartName",
  "AssessmentFamily",
  "AssessmentForm",
  "AssessmentResponse",
  "AssessmentTitle",
  "AttendanceEventReason",
  "Author",
  "BellScheduleName",
  "BirthInternationalProvince",
  "BuildingSiteNumber",
  "BusNumber",
  "CaseNumber",
  "CIPCode",
  "City",
  "ClassPeriodName",
  "ClassroomIdentificationCode",
  "Code",
  "CodeName",
  "CodeValue",
  "CohortDescription",
  "CohortIdentifier",
  "Comment",
  "CongressionalDistrict",
  "ContactRestrictions",
  "ContactTitle",
  "ContentIdentifier",
  "ContentStandardName",
  "ContentStandardTitle",
  "ContentStandardVersion",
  "ContentVersion",
  "Coordinate",
  "CountyFIPSCode",
  "CourseCatalogURL",
  "CourseSetName",
  "CourseTitle",
  "CredentialEndorsement",
  "CrisisEventName",
  "Criteria",
  "CustomizationKey",
  "CustomizationValue",
  "Department",
  "Description",
  "DescriptorReferenceType",
  "DesignatedBy",
  "DiagnosticStatement",
  "DiplomaDescription",
  "DisabilityDiagnosis",
  "DisciplineActionIdentifier",
  "DocumentTitle",
  "ElectronicMailAddress",
  "EvaluationLateReason",
  "ExternalEvaluator",
  "ExternalTerm",
  "FirstName",
  "FullName",
  "GenderIdentity",
  "GenerationCodeSuffix",
  "GradebookEntryIdentifier",
  "GradeEarned",
  "GradeEarnedDescription",
  "GradingPeriodName",
  "HonorDescription",
  "IdentificationCode",
  "ImmunizationName",
  "IncidentIdentifier",
  "Indicator",
  "IndicatorName",
  "IssuerName",
  "ItemText",
  "LastSurname",
  "LearningResourceMetadataURI",
  "LearningStandardEquivalenceStrengthDescription",
  "LearningStandardId",
  "LicenseIdentifier",
  "LicensingOrganization",
  "LocalCourseCode",
  "MappedValue",
  "MatrixElement",
  "MedicalExemption",
  "MiddleName",
  "NameOfCounty",
  "NameOfInstitution",
  "Nomenclature",
  "Objective",
  "PerformanceLevelIndicatorName",
  "PersonalTitlePrefix",
  "PositionTitle",
  "PostalCode",
  "ProfileThumbnail",
  "ProgramEvaluationDescription",
  "ProgramEvaluationElementTitle",
  "ProgramEvaluationObjectiveTitle",
  "ProgramEvaluationTitle",
  "ProgramId",
  "ProgramName",
  "Publisher",
  "Rating",
  "RatingOrganization",
  "RatingProgram",
  "RatingTitleType",
  "Reason",
  "RecognitionDescription",
  "ReporterName",
  "RequisitionNumber",
  "ResponseDescription",
  "ResponseValue",
  "RestraintEventIdentifier",
  "Result",
  "SchoolIdentifier",
  "SectionIdentifier",
  "SectionName",
  "ShortDescription",
  "SpecialAccomodationRequirements",
  "SpecialEducationExitExplained",
  "Statement",
  "StreetNumberName",
  "SurveySectionTitle",
  "SurveyTitle",
  "TagValue",
  "TelephoneNumber",
  "TextResponse",
  "TextValue",
  "TimeInterval",
  "Title",
  "UniqueId",
  "URI",
  "Value",
  "WeekIdentifier",
  "Whereabouts",
  "===== Numeric Simple Types =====",
  "AgeAuthorizedToServe",
  "AssessmentVersion",
  "AttendanceEventDuration",
  "Capacity",
  "CreditConversion",
  "CreditsValue",
  "Currency",
  "DisciplineActionLength",
  "Dosage",
  "Duration",
  "EvaluationDelayDays",
  "EventDuration",
  "FullTimeEquivalency",
  "GPA",
  "HoursAbsent",
  "HoursPerWeek",
  "Learning",
  "LocalFiscalYear",
  "MaxCompletionsForCredit",
  "MaxPoints",
  "MaxRawScore",
  "Mileage",
  "NumberOfDaysAbsent",
  "NumberOfDaysInAttendance",
  "NumberOfDaysTardy",
  "NumberOfParts",
  "NumberOfYears",
  "NumericGrade",
  "NumericRating",
  "NumericResponse",
  "NumericValue",
  "OrderOfPriority",
  "Percent",
  "RawScoreResult",
  "SectionRating",
  "SequenceOfCourse",
  "SortOrder",
  "TotalInstructionalDays",
  "TotalInstructionalTime",
]
`;

exports[`when generating xsd with extension and comparing it to data standard 5.2 authoritative artifacts should have complex types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "AcademicWeek",
  "AccountabilityRating",
  "Assessment",
  "AssessmentAdministration",
  "AssessmentAdministrationParticipation",
  "AssessmentBatteryPart",
  "AssessmentItem",
  "AssessmentScoreRangeLearningStandard",
  "BalanceSheetDimension",
  "BellSchedule",
  "Calendar",
  "CalendarDate",
  "ChartOfAccount",
  "ClassPeriod",
  "Cohort",
  "CommunityOrganization",
  "CommunityProvider",
  "CommunityProviderLicense",
  "CompetencyObjective",
  "Contact",
  "Course",
  "CourseOffering",
  "CourseTranscript",
  "Credential",
  "CrisisEvent",
  "DescriptorMapping",
  "DisciplineAction",
  "DisciplineIncident",
  "EducationContent",
  "EducationOrganization",
  "EducationOrganizationNetwork",
  "EducationServiceCenter",
  "EvaluationRubricDimension",
  "FunctionDimension",
  "FundDimension",
  "Grade",
  "GradebookEntry",
  "GradingPeriod",
  "GraduationPlan",
  "Intervention",
  "InterventionPrescription",
  "InterventionStudy",
  "LearningStandard",
  "LocalAccount",
  "LocalActual",
  "LocalBudget",
  "LocalContractedStaff",
  "LocalEducationAgency",
  "LocalEncumbrance",
  "LocalPayroll",
  "Location",
  "ObjectDimension",
  "ObjectiveAssessment",
  "OpenStaffPosition",
  "OperationalUnitDimension",
  "OrganizationDepartment",
  "Person",
  "PostSecondaryEvent",
  "PostSecondaryInstitution",
  "Program",
  "ProgramDimension",
  "ProgramEvaluation",
  "ProgramEvaluationElement",
  "ProgramEvaluationObjective",
  "ProjectDimension",
  "ReportCard",
  "RestraintEvent",
  "School",
  "Section",
  "SectionAttendanceTakenEvent",
  "Session",
  "SourceDimension",
  "Staff",
  "StaffAbsenceEvent",
  "StaffLeave",
  "StateEducationAgency",
  "Student",
  "StudentAcademicRecord",
  "StudentAssessment",
  "StudentAssessmentRegistration",
  "StudentCompetencyObjective",
  "StudentEducationOrganizationAssessmentAccommodation",
  "StudentGradebookEntry",
  "StudentHealth",
  "StudentInterventionAttendanceEvent",
  "StudentProgramAttendanceEvent",
  "StudentProgramEvaluation",
  "StudentSchoolAttendanceEvent",
  "StudentSectionAttendanceEvent",
  "StudentTransportation",
  "Survey",
  "SurveyQuestion",
  "SurveyQuestionResponse",
  "SurveyResponse",
  "SurveySection",
  "SurveySectionResponse",
  "===== Descriptors =====",
  "AbsenceEventCategoryDescriptor",
  "AcademicHonorCategoryDescriptor",
  "AcademicSubjectDescriptor",
  "AccommodationDescriptor",
  "AccountTypeDescriptor",
  "AchievementCategoryDescriptor",
  "AdditionalCreditTypeDescriptor",
  "AddressTypeDescriptor",
  "AdministrationEnvironmentDescriptor",
  "AdministrativeFundingControlDescriptor",
  "AncestryEthnicOriginDescriptor",
  "AssessmentCategoryDescriptor",
  "AssessmentIdentificationSystemDescriptor",
  "AssessmentItemCategoryDescriptor",
  "AssessmentItemResultDescriptor",
  "AssessmentPeriodDescriptor",
  "AssessmentReportingMethodDescriptor",
  "AssignmentLateStatusDescriptor",
  "AttemptStatusDescriptor",
  "AttendanceEventCategoryDescriptor",
  "BarrierToInternetAccessInResidenceDescriptor",
  "BehaviorDescriptor",
  "BusRouteDescriptor",
  "CalendarEventDescriptor",
  "CalendarTypeDescriptor",
  "CareerPathwayDescriptor",
  "CharterApprovalAgencyTypeDescriptor",
  "CharterStatusDescriptor",
  "CitizenshipStatusDescriptor",
  "ClassroomPositionDescriptor",
  "CohortScopeDescriptor",
  "CohortTypeDescriptor",
  "CohortYearTypeDescriptor",
  "CompetencyLevelDescriptor",
  "ContactTypeDescriptor",
  "ContentClassDescriptor",
  "ContinuationOfServicesReasonDescriptor",
  "CostRateDescriptor",
  "CountryDescriptor",
  "CourseAttemptResultDescriptor",
  "CourseDefinedByDescriptor",
  "CourseGPAApplicabilityDescriptor",
  "CourseIdentificationSystemDescriptor",
  "CourseLevelCharacteristicDescriptor",
  "CourseRepeatCodeDescriptor",
  "CredentialFieldDescriptor",
  "CredentialTypeDescriptor",
  "CreditCategoryDescriptor",
  "CreditTypeDescriptor",
  "CrisisTypeDescriptor",
  "CTEProgramServiceDescriptor",
  "CurriculumUsedDescriptor",
  "DeliveryMethodDescriptor",
  "DiagnosisDescriptor",
  "DiplomaLevelDescriptor",
  "DiplomaTypeDescriptor",
  "DisabilityDescriptor",
  "DisabilityDesignationDescriptor",
  "DisabilityDeterminationSourceTypeDescriptor",
  "DisciplineActionLengthDifferenceReasonDescriptor",
  "DisciplineDescriptor",
  "DisciplineIncidentParticipationCodeDescriptor",
  "DisplacedStudentStatusDescriptor",
  "DualCreditInstitutionDescriptor",
  "DualCreditTypeDescriptor",
  "EducationalEnvironmentDescriptor",
  "EducationOrganizationAssociationTypeDescriptor",
  "EducationOrganizationCategoryDescriptor",
  "EducationOrganizationIdentificationSystemDescriptor",
  "EducationPlanDescriptor",
  "ElectronicMailTypeDescriptor",
  "EligibilityDelayReasonDescriptor",
  "EligibilityEvaluationTypeDescriptor",
  "EmploymentStatusDescriptor",
  "EnrollmentTypeDescriptor",
  "EntryGradeLevelReasonDescriptor",
  "EntryTypeDescriptor",
  "EvaluationDelayReasonDescriptor",
  "EventCircumstanceDescriptor",
  "ExitWithdrawTypeDescriptor",
  "FinancialCollectionDescriptor",
  "GradebookEntryTypeDescriptor",
  "GradeLevelDescriptor",
  "GradePointAverageTypeDescriptor",
  "GradeTypeDescriptor",
  "GradingPeriodDescriptor",
  "GraduationPlanTypeDescriptor",
  "GunFreeSchoolsActReportingStatusDescriptor",
  "HomelessPrimaryNighttimeResidenceDescriptor",
  "HomelessProgramServiceDescriptor",
  "IDEAPartDescriptor",
  "IdentificationDocumentUseDescriptor",
  "ImmunizationTypeDescriptor",
  "IncidentLocationDescriptor",
  "IndicatorDescriptor",
  "IndicatorGroupDescriptor",
  "IndicatorLevelDescriptor",
  "InstitutionTelephoneNumberTypeDescriptor",
  "InteractivityStyleDescriptor",
  "InternetAccessDescriptor",
  "InternetAccessTypeInResidenceDescriptor",
  "InternetPerformanceInResidenceDescriptor",
  "InterventionClassDescriptor",
  "InterventionEffectivenessRatingDescriptor",
  "LanguageDescriptor",
  "LanguageInstructionProgramServiceDescriptor",
  "LanguageUseDescriptor",
  "LearningStandardCategoryDescriptor",
  "LearningStandardEquivalenceStrengthDescriptor",
  "LearningStandardScopeDescriptor",
  "LevelOfEducationDescriptor",
  "LicenseStatusDescriptor",
  "LicenseTypeDescriptor",
  "LimitedEnglishProficiencyDescriptor",
  "LocaleDescriptor",
  "LocalEducationAgencyCategoryDescriptor",
  "MagnetSpecialProgramEmphasisSchoolDescriptor",
  "MediumOfInstructionDescriptor",
  "MethodCreditEarnedDescriptor",
  "MigrantEducationProgramServiceDescriptor",
  "ModelEntityDescriptor",
  "MonitoredDescriptor",
  "NeglectedOrDelinquentProgramDescriptor",
  "NeglectedOrDelinquentProgramServiceDescriptor",
  "NetworkPurposeDescriptor",
  "NonMedicalImmunizationExemptionDescriptor",
  "OperationalStatusDescriptor",
  "OtherNameTypeDescriptor",
  "ParticipationDescriptor",
  "ParticipationStatusDescriptor",
  "PerformanceBaseConversionDescriptor",
  "PerformanceLevelDescriptor",
  "PersonalInformationVerificationDescriptor",
  "PlatformTypeDescriptor",
  "PopulationServedDescriptor",
  "PostingResultDescriptor",
  "PostSecondaryEventCategoryDescriptor",
  "PostSecondaryInstitutionLevelDescriptor",
  "PrimaryLearningDeviceAccessDescriptor",
  "PrimaryLearningDeviceAwayFromSchoolDescriptor",
  "PrimaryLearningDeviceProviderDescriptor",
  "ProficiencyDescriptor",
  "ProgramAssignmentDescriptor",
  "ProgramCharacteristicDescriptor",
  "ProgramEvaluationPeriodDescriptor",
  "ProgramEvaluationTypeDescriptor",
  "ProgramSponsorDescriptor",
  "ProgramTypeDescriptor",
  "ProgressDescriptor",
  "ProgressLevelDescriptor",
  "ProviderCategoryDescriptor",
  "ProviderProfitabilityDescriptor",
  "ProviderStatusDescriptor",
  "PublicationStatusDescriptor",
  "QuestionFormDescriptor",
  "RaceDescriptor",
  "RatingLevelDescriptor",
  "ReasonExitedDescriptor",
  "ReasonNotTestedDescriptor",
  "RecognitionTypeDescriptor",
  "RelationDescriptor",
  "RepeatIdentifierDescriptor",
  "ReporterDescriptionDescriptor",
  "ReportingTagDescriptor",
  "ResidencyStatusDescriptor",
  "ResponseIndicatorDescriptor",
  "ResponsibilityDescriptor",
  "RestraintEventReasonDescriptor",
  "ResultDatatypeTypeDescriptor",
  "RetestIndicatorDescriptor",
  "SchoolCategoryDescriptor",
  "SchoolChoiceBasisDescriptor",
  "SchoolChoiceImplementStatusDescriptor",
  "SchoolFoodServiceProgramServiceDescriptor",
  "SchoolTypeDescriptor",
  "Section504DisabilityDescriptor",
  "SectionCharacteristicDescriptor",
  "SectionTypeDescriptor",
  "SeparationDescriptor",
  "SeparationReasonDescriptor",
  "ServiceDescriptor",
  "SexDescriptor",
  "SourceSystemDescriptor",
  "SpecialEducationExitReasonDescriptor",
  "SpecialEducationProgramServiceDescriptor",
  "SpecialEducationSettingDescriptor",
  "StaffClassificationDescriptor",
  "StaffIdentificationSystemDescriptor",
  "StaffLeaveEventCategoryDescriptor",
  "StateAbbreviationDescriptor",
  "StudentCharacteristicDescriptor",
  "StudentIdentificationSystemDescriptor",
  "SubmissionStatusDescriptor",
  "SupporterMilitaryConnectionDescriptor",
  "SurveyCategoryDescriptor",
  "SurveyLevelDescriptor",
  "TeachingCredentialBasisDescriptor",
  "TeachingCredentialDescriptor",
  "TechnicalSkillsAssessmentDescriptor",
  "TelephoneNumberTypeDescriptor",
  "TermDescriptor",
  "TitleIPartAParticipantDescriptor",
  "TitleIPartAProgramServiceDescriptor",
  "TitleIPartASchoolDesignationDescriptor",
  "TransportationPublicExpenseEligibilityTypeDescriptor",
  "TransportationTypeDescriptor",
  "TravelDayofWeekDescriptor",
  "TravelDirectionDescriptor",
  "TribalAffiliationDescriptor",
  "VisaDescriptor",
  "WeaponDescriptor",
  "===== Associations =====",
  "EducationOrganizationInterventionPrescriptionAssociation",
  "EducationOrganizationNetworkAssociation",
  "EducationOrganizationPeerAssociation",
  "FeederSchoolAssociation",
  "GeneralStudentProgramAssociation",
  "LearningStandardEquivalenceAssociation",
  "StaffCohortAssociation",
  "StaffDisciplineIncidentAssociation",
  "StaffEducationOrganizationAssignmentAssociation",
  "StaffEducationOrganizationContactAssociation",
  "StaffEducationOrganizationEmploymentAssociation",
  "StaffProgramAssociation",
  "StaffSchoolAssociation",
  "StaffSectionAssociation",
  "StudentAssessmentEducationOrganizationAssociation",
  "StudentAssessmentRegistrationBatteryPartAssociation",
  "StudentCohortAssociation",
  "StudentContactAssociation",
  "StudentCTEProgramAssociation",
  "StudentDisciplineIncidentBehaviorAssociation",
  "StudentDisciplineIncidentNonOffenderAssociation",
  "StudentEducationOrganizationAssociation",
  "StudentEducationOrganizationResponsibilityAssociation",
  "StudentHomelessProgramAssociation",
  "StudentInterventionAssociation",
  "StudentLanguageInstructionProgramAssociation",
  "StudentMigrantEducationProgramAssociation",
  "StudentNeglectedOrDelinquentProgramAssociation",
  "StudentProgramAssociation",
  "StudentSchoolAssociation",
  "StudentSchoolFoodServiceProgramAssociation",
  "StudentSection504ProgramAssociation",
  "StudentSectionAssociation",
  "StudentSpecialEducationProgramAssociation",
  "StudentSpecialEducationProgramEligibilityAssociation",
  "StudentTitleIPartAProgramAssociation",
  "SurveyCourseAssociation",
  "SurveyProgramAssociation",
  "SurveyResponseEducationOrganizationTargetAssociation",
  "SurveyResponseStaffTargetAssociation",
  "SurveySectionAssociation",
  "SurveySectionResponseEducationOrganizationTargetAssociation",
  "SurveySectionResponseStaffTargetAssociation",
  "===== Base Types (borrowed from NEIM standards) =====",
  "ComplexObjectType",
  "DescriptorType",
  "ReferenceType",
  "===== Extended Reference Types =====",
  "AcademicWeekIdentityType",
  "AcademicWeekReferenceType",
  "AccountabilityRatingIdentityType",
  "AccountabilityRatingReferenceType",
  "AssessmentAdministrationIdentityType",
  "AssessmentAdministrationParticipationIdentityType",
  "AssessmentAdministrationParticipationReferenceType",
  "AssessmentAdministrationReferenceType",
  "AssessmentBatteryPartIdentityType",
  "AssessmentBatteryPartReferenceType",
  "AssessmentIdentityType",
  "AssessmentItemIdentityType",
  "AssessmentItemReferenceType",
  "AssessmentLookupType",
  "AssessmentReferenceType",
  "AssessmentScoreRangeLearningStandardIdentityType",
  "AssessmentScoreRangeLearningStandardReferenceType",
  "BalanceSheetDimensionIdentityType",
  "BalanceSheetDimensionReferenceType",
  "BellScheduleIdentityType",
  "BellScheduleReferenceType",
  "CalendarDateIdentityType",
  "CalendarDateReferenceType",
  "CalendarIdentityType",
  "CalendarReferenceType",
  "ChartOfAccountIdentityType",
  "ChartOfAccountReferenceType",
  "ClassPeriodIdentityType",
  "ClassPeriodReferenceType",
  "CohortIdentityType",
  "CohortReferenceType",
  "CommunityOrganizationIdentityType",
  "CommunityOrganizationReferenceType",
  "CommunityProviderIdentityType",
  "CommunityProviderLicenseIdentityType",
  "CommunityProviderLicenseReferenceType",
  "CommunityProviderReferenceType",
  "CompetencyObjectiveIdentityType",
  "CompetencyObjectiveReferenceType",
  "ContactIdentityType",
  "ContactReferenceType",
  "CourseIdentityType",
  "CourseLookupType",
  "CourseOfferingIdentityType",
  "CourseOfferingReferenceType",
  "CourseReferenceType",
  "CourseTranscriptIdentityType",
  "CourseTranscriptReferenceType",
  "CredentialIdentityType",
  "CredentialReferenceType",
  "CrisisEventIdentityType",
  "CrisisEventReferenceType",
  "DescriptorMappingIdentityType",
  "DescriptorMappingReferenceType",
  "DisciplineActionIdentityType",
  "DisciplineActionReferenceType",
  "DisciplineIncidentIdentityType",
  "DisciplineIncidentReferenceType",
  "EducationContentIdentityType",
  "EducationContentReferenceType",
  "EducationOrganizationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationIdentityType",
  "EducationOrganizationInterventionPrescriptionAssociationReferenceType",
  "EducationOrganizationLookupType",
  "EducationOrganizationNetworkAssociationIdentityType",
  "EducationOrganizationNetworkAssociationReferenceType",
  "EducationOrganizationNetworkIdentityType",
  "EducationOrganizationNetworkLookupType",
  "EducationOrganizationNetworkReferenceType",
  "EducationOrganizationPeerAssociationIdentityType",
  "EducationOrganizationPeerAssociationReferenceType",
  "EducationOrganizationReferenceType",
  "EducationServiceCenterIdentityType",
  "EducationServiceCenterLookupType",
  "EducationServiceCenterReferenceType",
  "EvaluationRubricDimensionIdentityType",
  "EvaluationRubricDimensionReferenceType",
  "FeederSchoolAssociationIdentityType",
  "FeederSchoolAssociationReferenceType",
  "FunctionDimensionIdentityType",
  "FunctionDimensionReferenceType",
  "FundDimensionIdentityType",
  "FundDimensionReferenceType",
  "GeneralStudentProgramAssociationIdentityType",
  "GeneralStudentProgramAssociationReferenceType",
  "GradebookEntryIdentityType",
  "GradebookEntryLookupType",
  "GradebookEntryReferenceType",
  "GradeIdentityType",
  "GradeReferenceType",
  "GradingPeriodIdentityType",
  "GradingPeriodReferenceType",
  "GraduationPlanIdentityType",
  "GraduationPlanReferenceType",
  "InterventionIdentityType",
  "InterventionPrescriptionIdentityType",
  "InterventionPrescriptionReferenceType",
  "InterventionReferenceType",
  "InterventionStudyIdentityType",
  "InterventionStudyReferenceType",
  "LearningStandardEquivalenceAssociationIdentityType",
  "LearningStandardEquivalenceAssociationReferenceType",
  "LearningStandardIdentityType",
  "LearningStandardLookupType",
  "LearningStandardReferenceType",
  "LocalAccountIdentityType",
  "LocalAccountReferenceType",
  "LocalActualIdentityType",
  "LocalActualReferenceType",
  "LocalBudgetIdentityType",
  "LocalBudgetReferenceType",
  "LocalContractedStaffIdentityType",
  "LocalContractedStaffReferenceType",
  "LocalEducationAgencyIdentityType",
  "LocalEducationAgencyLookupType",
  "LocalEducationAgencyReferenceType",
  "LocalEncumbranceIdentityType",
  "LocalEncumbranceReferenceType",
  "LocalPayrollIdentityType",
  "LocalPayrollReferenceType",
  "LocationIdentityType",
  "LocationReferenceType",
  "ObjectDimensionIdentityType",
  "ObjectDimensionReferenceType",
  "ObjectiveAssessmentIdentityType",
  "ObjectiveAssessmentReferenceType",
  "OpenStaffPositionIdentityType",
  "OpenStaffPositionReferenceType",
  "OperationalUnitDimensionIdentityType",
  "OperationalUnitDimensionReferenceType",
  "OrganizationDepartmentIdentityType",
  "OrganizationDepartmentReferenceType",
  "PersonIdentityType",
  "PersonReferenceType",
  "PostSecondaryEventIdentityType",
  "PostSecondaryEventReferenceType",
  "PostSecondaryInstitutionIdentityType",
  "PostSecondaryInstitutionReferenceType",
  "ProgramDimensionIdentityType",
  "ProgramDimensionReferenceType",
  "ProgramEvaluationElementIdentityType",
  "ProgramEvaluationElementReferenceType",
  "ProgramEvaluationIdentityType",
  "ProgramEvaluationObjectiveIdentityType",
  "ProgramEvaluationObjectiveReferenceType",
  "ProgramEvaluationReferenceType",
  "ProgramIdentityType",
  "ProgramLookupType",
  "ProgramReferenceType",
  "ProjectDimensionIdentityType",
  "ProjectDimensionReferenceType",
  "ReportCardIdentityType",
  "ReportCardReferenceType",
  "RestraintEventIdentityType",
  "RestraintEventReferenceType",
  "SchoolIdentityType",
  "SchoolLookupType",
  "SchoolReferenceType",
  "SectionAttendanceTakenEventIdentityType",
  "SectionAttendanceTakenEventReferenceType",
  "SectionIdentityType",
  "SectionLookupType",
  "SectionReferenceType",
  "SessionIdentityType",
  "SessionLookupType",
  "SessionReferenceType",
  "SourceDimensionIdentityType",
  "SourceDimensionReferenceType",
  "StaffAbsenceEventIdentityType",
  "StaffAbsenceEventReferenceType",
  "StaffCohortAssociationIdentityType",
  "StaffCohortAssociationReferenceType",
  "StaffDisciplineIncidentAssociationIdentityType",
  "StaffDisciplineIncidentAssociationReferenceType",
  "StaffEducationOrganizationAssignmentAssociationIdentityType",
  "StaffEducationOrganizationAssignmentAssociationReferenceType",
  "StaffEducationOrganizationContactAssociationIdentityType",
  "StaffEducationOrganizationContactAssociationReferenceType",
  "StaffEducationOrganizationEmploymentAssociationIdentityType",
  "StaffEducationOrganizationEmploymentAssociationReferenceType",
  "StaffIdentityType",
  "StaffLeaveIdentityType",
  "StaffLeaveReferenceType",
  "StaffLookupType",
  "StaffProgramAssociationIdentityType",
  "StaffProgramAssociationReferenceType",
  "StaffReferenceType",
  "StaffSchoolAssociationIdentityType",
  "StaffSchoolAssociationReferenceType",
  "StaffSectionAssociationIdentityType",
  "StaffSectionAssociationReferenceType",
  "StateEducationAgencyIdentityType",
  "StateEducationAgencyLookupType",
  "StateEducationAgencyReferenceType",
  "StudentAcademicRecordIdentityType",
  "StudentAcademicRecordReferenceType",
  "StudentAssessmentEducationOrganizationAssociationIdentityType",
  "StudentAssessmentEducationOrganizationAssociationReferenceType",
  "StudentAssessmentIdentityType",
  "StudentAssessmentReferenceType",
  "StudentAssessmentRegistrationBatteryPartAssociationIdentityType",
  "StudentAssessmentRegistrationBatteryPartAssociationReferenceType",
  "StudentAssessmentRegistrationIdentityType",
  "StudentAssessmentRegistrationReferenceType",
  "StudentCohortAssociationIdentityType",
  "StudentCohortAssociationReferenceType",
  "StudentCompetencyObjectiveIdentityType",
  "StudentCompetencyObjectiveReferenceType",
  "StudentContactAssociationIdentityType",
  "StudentContactAssociationReferenceType",
  "StudentCTEProgramAssociationIdentityType",
  "StudentCTEProgramAssociationReferenceType",
  "StudentDisciplineIncidentBehaviorAssociationIdentityType",
  "StudentDisciplineIncidentBehaviorAssociationReferenceType",
  "StudentDisciplineIncidentNonOffenderAssociationIdentityType",
  "StudentDisciplineIncidentNonOffenderAssociationReferenceType",
  "StudentEducationOrganizationAssessmentAccommodationIdentityType",
  "StudentEducationOrganizationAssessmentAccommodationReferenceType",
  "StudentEducationOrganizationAssociationIdentityType",
  "StudentEducationOrganizationAssociationReferenceType",
  "StudentEducationOrganizationResponsibilityAssociationIdentityType",
  "StudentEducationOrganizationResponsibilityAssociationReferenceType",
  "StudentGradebookEntryIdentityType",
  "StudentGradebookEntryReferenceType",
  "StudentHealthIdentityType",
  "StudentHealthReferenceType",
  "StudentHomelessProgramAssociationIdentityType",
  "StudentHomelessProgramAssociationReferenceType",
  "StudentIdentityType",
  "StudentInterventionAssociationIdentityType",
  "StudentInterventionAssociationReferenceType",
  "StudentInterventionAttendanceEventIdentityType",
  "StudentInterventionAttendanceEventReferenceType",
  "StudentLanguageInstructionProgramAssociationIdentityType",
  "StudentLanguageInstructionProgramAssociationReferenceType",
  "StudentLookupType",
  "StudentMigrantEducationProgramAssociationIdentityType",
  "StudentMigrantEducationProgramAssociationReferenceType",
  "StudentNeglectedOrDelinquentProgramAssociationIdentityType",
  "StudentNeglectedOrDelinquentProgramAssociationReferenceType",
  "StudentProgramAssociationIdentityType",
  "StudentProgramAssociationReferenceType",
  "StudentProgramAttendanceEventIdentityType",
  "StudentProgramAttendanceEventReferenceType",
  "StudentProgramEvaluationIdentityType",
  "StudentProgramEvaluationReferenceType",
  "StudentReferenceType",
  "StudentSchoolAssociationIdentityType",
  "StudentSchoolAssociationReferenceType",
  "StudentSchoolAttendanceEventIdentityType",
  "StudentSchoolAttendanceEventReferenceType",
  "StudentSchoolFoodServiceProgramAssociationIdentityType",
  "StudentSchoolFoodServiceProgramAssociationReferenceType",
  "StudentSection504ProgramAssociationIdentityType",
  "StudentSection504ProgramAssociationReferenceType",
  "StudentSectionAssociationIdentityType",
  "StudentSectionAssociationReferenceType",
  "StudentSectionAttendanceEventIdentityType",
  "StudentSectionAttendanceEventReferenceType",
  "StudentSpecialEducationProgramAssociationIdentityType",
  "StudentSpecialEducationProgramAssociationReferenceType",
  "StudentSpecialEducationProgramEligibilityAssociationIdentityType",
  "StudentSpecialEducationProgramEligibilityAssociationReferenceType",
  "StudentTitleIPartAProgramAssociationIdentityType",
  "StudentTitleIPartAProgramAssociationReferenceType",
  "StudentTransportationIdentityType",
  "StudentTransportationReferenceType",
  "SurveyCourseAssociationIdentityType",
  "SurveyCourseAssociationReferenceType",
  "SurveyIdentityType",
  "SurveyProgramAssociationIdentityType",
  "SurveyProgramAssociationReferenceType",
  "SurveyQuestionIdentityType",
  "SurveyQuestionReferenceType",
  "SurveyQuestionResponseIdentityType",
  "SurveyQuestionResponseReferenceType",
  "SurveyReferenceType",
  "SurveyResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveyResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveyResponseIdentityType",
  "SurveyResponseReferenceType",
  "SurveyResponseStaffTargetAssociationIdentityType",
  "SurveyResponseStaffTargetAssociationReferenceType",
  "SurveySectionAssociationIdentityType",
  "SurveySectionAssociationReferenceType",
  "SurveySectionIdentityType",
  "SurveySectionReferenceType",
  "SurveySectionResponseEducationOrganizationTargetAssociationIdentityType",
  "SurveySectionResponseEducationOrganizationTargetAssociationReferenceType",
  "SurveySectionResponseIdentityType",
  "SurveySectionResponseReferenceType",
  "SurveySectionResponseStaffTargetAssociationIdentityType",
  "SurveySectionResponseStaffTargetAssociationReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "AcademicHonor",
  "Achievement",
  "AdditionalCredits",
  "AdditionalImmunization",
  "Address",
  "AdministrationPointOfContact",
  "AssessmentCustomization",
  "AssessmentIdentificationCode",
  "AssessmentPerformanceLevel",
  "AssessmentPeriod",
  "AssessmentScore",
  "AttendanceEvent",
  "Behavior",
  "BirthData",
  "Citizenship",
  "ClassRanking",
  "CohortYear",
  "ContentStandard",
  "CourseIdentificationCode",
  "Credits",
  "CreditsByCourse",
  "CreditsByCreditCategory",
  "CreditsBySubject",
  "CTEProgramService",
  "Diploma",
  "Disability",
  "DisciplineIncidentExternalParticipant",
  "DisplacedStudent",
  "DualCredit",
  "EducationContentSource",
  "EducationOrganizationIdentificationCode",
  "EducationOrganizationIndicator",
  "ElectronicMail",
  "EmploymentPeriod",
  "EnglishLanguageProficiencyAssessment",
  "GradePointAverage",
  "HomelessProgramService",
  "IdentificationDocument",
  "InstitutionTelephone",
  "InternationalAddress",
  "InterventionEffectiveness",
  "Language",
  "LanguageInstructionProgramService",
  "LearningResource",
  "LearningStandardGrade",
  "LearningStandardIdentificationCode",
  "License",
  "LocalEducationAgencyAccountability",
  "LocalEducationAgencyFederalFunds",
  "Matrix",
  "MeetingTime",
  "MigrantEducationProgramService",
  "Name",
  "NeglectedOrDelinquentProgramService",
  "OtherName",
  "PartialCourseTranscriptAwards",
  "PerformanceLevel",
  "Period",
  "PossibleResponse",
  "ProgramEvaluationLevel",
  "ProgramParticipationStatus",
  "Recognition",
  "ReportingTag",
  "RequiredAssessment",
  "RequiredImmunization",
  "ResponseChoice",
  "SchoolFoodServiceProgramService",
  "ScoreResult",
  "Service",
  "ServiceProvider",
  "SpecialEducationProgramService",
  "StaffIdentificationCode",
  "StateEducationAgencyAccountability",
  "StateEducationAgencyFederalFunds",
  "StudentAssessmentItem",
  "StudentBusDetails",
  "StudentCharacteristic",
  "StudentEvaluationElement",
  "StudentEvaluationObjective",
  "StudentIdentificationCode",
  "StudentIndicator",
  "StudentObjectiveAssessment",
  "SurveyQuestionMatrixElementResponse",
  "SurveyQuestionResponseValue",
  "Telephone",
  "TitleIPartAProgramService",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
  "===== Domain Entities =====",
  "EdFiXFinance-BalanceSheetDimension",
  "EdFiXFinance-ChartOfAccount",
  "EdFiXFinance-FunctionDimension",
  "EdFiXFinance-FundDimension",
  "EdFiXFinance-LocalAccount",
  "EdFiXFinance-LocalActual",
  "EdFiXFinance-LocalBudget",
  "EdFiXFinance-ObjectDimension",
  "EdFiXFinance-OperationalUnitDimension",
  "EdFiXFinance-ProgramDimension",
  "EdFiXFinance-ProjectDimension",
  "EdFiXFinance-SourceDimension",
  "===== Descriptors =====",
  "EdFiXFinance-AccountTypeDescriptor",
  "EdFiXFinance-FinancialCollectionDescriptor",
  "EdFiXFinance-ReportingTagDescriptor",
  "===== Associations =====",
  "===== Extended Reference Types =====",
  "EdFiXFinance-BalanceSheetDimensionIdentityType",
  "EdFiXFinance-BalanceSheetDimensionReferenceType",
  "EdFiXFinance-ChartOfAccountIdentityType",
  "EdFiXFinance-ChartOfAccountReferenceType",
  "EdFiXFinance-FunctionDimensionIdentityType",
  "EdFiXFinance-FunctionDimensionReferenceType",
  "EdFiXFinance-FundDimensionIdentityType",
  "EdFiXFinance-FundDimensionReferenceType",
  "EdFiXFinance-LocalAccountIdentityType",
  "EdFiXFinance-LocalAccountReferenceType",
  "EdFiXFinance-LocalActualIdentityType",
  "EdFiXFinance-LocalActualReferenceType",
  "EdFiXFinance-LocalBudgetIdentityType",
  "EdFiXFinance-LocalBudgetReferenceType",
  "EdFiXFinance-ObjectDimensionIdentityType",
  "EdFiXFinance-ObjectDimensionReferenceType",
  "EdFiXFinance-OperationalUnitDimensionIdentityType",
  "EdFiXFinance-OperationalUnitDimensionReferenceType",
  "EdFiXFinance-ProgramDimensionIdentityType",
  "EdFiXFinance-ProgramDimensionReferenceType",
  "EdFiXFinance-ProjectDimensionIdentityType",
  "EdFiXFinance-ProjectDimensionReferenceType",
  "EdFiXFinance-SourceDimensionIdentityType",
  "EdFiXFinance-SourceDimensionReferenceType",
  "===== Extended Descriptor Reference Types =====",
  "===== Common Types =====",
  "EdFiXFinance-ReportingTag",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "===== Numeric Simple Types =====",
]
`;

exports[`when generating xsd with extension and comparing it to data standard 5.2 authoritative artifacts should have core with no differences 1`] = `""`;

exports[`when generating xsd with extension and comparing it to data standard 5.2 authoritative artifacts should have schema annotation with no differences 1`] = `""`;

exports[`when generating xsd with extension and comparing it to data standard 5.2 authoritative artifacts should have simple types in the correct order 1`] = `
Array [
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Base Types (borrowed from NEIM standards) =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "AbsenceEventCategoryDescriptorReferenceType",
  "AcademicHonorCategoryDescriptorReferenceType",
  "AcademicSubjectDescriptorReferenceType",
  "AccommodationDescriptorReferenceType",
  "AccountTypeDescriptorReferenceType",
  "AchievementCategoryDescriptorReferenceType",
  "AdditionalCreditTypeDescriptorReferenceType",
  "AddressTypeDescriptorReferenceType",
  "AdministrationEnvironmentDescriptorReferenceType",
  "AdministrativeFundingControlDescriptorReferenceType",
  "AncestryEthnicOriginDescriptorReferenceType",
  "AssessmentCategoryDescriptorReferenceType",
  "AssessmentIdentificationSystemDescriptorReferenceType",
  "AssessmentItemCategoryDescriptorReferenceType",
  "AssessmentItemResultDescriptorReferenceType",
  "AssessmentPeriodDescriptorReferenceType",
  "AssessmentReportingMethodDescriptorReferenceType",
  "AssignmentLateStatusDescriptorReferenceType",
  "AttemptStatusDescriptorReferenceType",
  "AttendanceEventCategoryDescriptorReferenceType",
  "BarrierToInternetAccessInResidenceDescriptorReferenceType",
  "BehaviorDescriptorReferenceType",
  "BusRouteDescriptorReferenceType",
  "CalendarEventDescriptorReferenceType",
  "CalendarTypeDescriptorReferenceType",
  "CareerPathwayDescriptorReferenceType",
  "CharterApprovalAgencyTypeDescriptorReferenceType",
  "CharterStatusDescriptorReferenceType",
  "CitizenshipStatusDescriptorReferenceType",
  "ClassroomPositionDescriptorReferenceType",
  "CohortScopeDescriptorReferenceType",
  "CohortTypeDescriptorReferenceType",
  "CohortYearTypeDescriptorReferenceType",
  "CompetencyLevelDescriptorReferenceType",
  "ContactTypeDescriptorReferenceType",
  "ContentClassDescriptorReferenceType",
  "ContinuationOfServicesReasonDescriptorReferenceType",
  "CostRateDescriptorReferenceType",
  "CountryDescriptorReferenceType",
  "CourseAttemptResultDescriptorReferenceType",
  "CourseDefinedByDescriptorReferenceType",
  "CourseGPAApplicabilityDescriptorReferenceType",
  "CourseIdentificationSystemDescriptorReferenceType",
  "CourseLevelCharacteristicDescriptorReferenceType",
  "CourseRepeatCodeDescriptorReferenceType",
  "CredentialFieldDescriptorReferenceType",
  "CredentialTypeDescriptorReferenceType",
  "CreditCategoryDescriptorReferenceType",
  "CreditTypeDescriptorReferenceType",
  "CrisisTypeDescriptorReferenceType",
  "CTEProgramServiceDescriptorReferenceType",
  "CurriculumUsedDescriptorReferenceType",
  "DeliveryMethodDescriptorReferenceType",
  "DiagnosisDescriptorReferenceType",
  "DiplomaLevelDescriptorReferenceType",
  "DiplomaTypeDescriptorReferenceType",
  "DisabilityDescriptorReferenceType",
  "DisabilityDesignationDescriptorReferenceType",
  "DisabilityDeterminationSourceTypeDescriptorReferenceType",
  "DisciplineActionLengthDifferenceReasonDescriptorReferenceType",
  "DisciplineDescriptorReferenceType",
  "DisciplineIncidentParticipationCodeDescriptorReferenceType",
  "DisplacedStudentStatusDescriptorReferenceType",
  "DualCreditInstitutionDescriptorReferenceType",
  "DualCreditTypeDescriptorReferenceType",
  "EducationalEnvironmentDescriptorReferenceType",
  "EducationOrganizationAssociationTypeDescriptorReferenceType",
  "EducationOrganizationCategoryDescriptorReferenceType",
  "EducationOrganizationIdentificationSystemDescriptorReferenceType",
  "EducationPlanDescriptorReferenceType",
  "ElectronicMailTypeDescriptorReferenceType",
  "EligibilityDelayReasonDescriptorReferenceType",
  "EligibilityEvaluationTypeDescriptorReferenceType",
  "EmploymentStatusDescriptorReferenceType",
  "EnrollmentTypeDescriptorReferenceType",
  "EntryGradeLevelReasonDescriptorReferenceType",
  "EntryTypeDescriptorReferenceType",
  "EvaluationDelayReasonDescriptorReferenceType",
  "EventCircumstanceDescriptorReferenceType",
  "ExitWithdrawTypeDescriptorReferenceType",
  "FinancialCollectionDescriptorReferenceType",
  "GradebookEntryTypeDescriptorReferenceType",
  "GradeLevelDescriptorReferenceType",
  "GradePointAverageTypeDescriptorReferenceType",
  "GradeTypeDescriptorReferenceType",
  "GradingPeriodDescriptorReferenceType",
  "GraduationPlanTypeDescriptorReferenceType",
  "GunFreeSchoolsActReportingStatusDescriptorReferenceType",
  "HomelessPrimaryNighttimeResidenceDescriptorReferenceType",
  "HomelessProgramServiceDescriptorReferenceType",
  "IDEAPartDescriptorReferenceType",
  "IdentificationDocumentUseDescriptorReferenceType",
  "ImmunizationTypeDescriptorReferenceType",
  "IncidentLocationDescriptorReferenceType",
  "IndicatorDescriptorReferenceType",
  "IndicatorGroupDescriptorReferenceType",
  "IndicatorLevelDescriptorReferenceType",
  "InstitutionTelephoneNumberTypeDescriptorReferenceType",
  "InteractivityStyleDescriptorReferenceType",
  "InternetAccessDescriptorReferenceType",
  "InternetAccessTypeInResidenceDescriptorReferenceType",
  "InternetPerformanceInResidenceDescriptorReferenceType",
  "InterventionClassDescriptorReferenceType",
  "InterventionEffectivenessRatingDescriptorReferenceType",
  "LanguageDescriptorReferenceType",
  "LanguageInstructionProgramServiceDescriptorReferenceType",
  "LanguageUseDescriptorReferenceType",
  "LearningStandardCategoryDescriptorReferenceType",
  "LearningStandardEquivalenceStrengthDescriptorReferenceType",
  "LearningStandardScopeDescriptorReferenceType",
  "LevelOfEducationDescriptorReferenceType",
  "LicenseStatusDescriptorReferenceType",
  "LicenseTypeDescriptorReferenceType",
  "LimitedEnglishProficiencyDescriptorReferenceType",
  "LocaleDescriptorReferenceType",
  "LocalEducationAgencyCategoryDescriptorReferenceType",
  "MagnetSpecialProgramEmphasisSchoolDescriptorReferenceType",
  "MediumOfInstructionDescriptorReferenceType",
  "MethodCreditEarnedDescriptorReferenceType",
  "MigrantEducationProgramServiceDescriptorReferenceType",
  "ModelEntityDescriptorReferenceType",
  "MonitoredDescriptorReferenceType",
  "NeglectedOrDelinquentProgramDescriptorReferenceType",
  "NeglectedOrDelinquentProgramServiceDescriptorReferenceType",
  "NetworkPurposeDescriptorReferenceType",
  "NonMedicalImmunizationExemptionDescriptorReferenceType",
  "OperationalStatusDescriptorReferenceType",
  "OtherNameTypeDescriptorReferenceType",
  "ParticipationDescriptorReferenceType",
  "ParticipationStatusDescriptorReferenceType",
  "PerformanceBaseConversionDescriptorReferenceType",
  "PerformanceLevelDescriptorReferenceType",
  "PersonalInformationVerificationDescriptorReferenceType",
  "PlatformTypeDescriptorReferenceType",
  "PopulationServedDescriptorReferenceType",
  "PostingResultDescriptorReferenceType",
  "PostSecondaryEventCategoryDescriptorReferenceType",
  "PostSecondaryInstitutionLevelDescriptorReferenceType",
  "PrimaryLearningDeviceAccessDescriptorReferenceType",
  "PrimaryLearningDeviceAwayFromSchoolDescriptorReferenceType",
  "PrimaryLearningDeviceProviderDescriptorReferenceType",
  "ProficiencyDescriptorReferenceType",
  "ProgramAssignmentDescriptorReferenceType",
  "ProgramCharacteristicDescriptorReferenceType",
  "ProgramEvaluationPeriodDescriptorReferenceType",
  "ProgramEvaluationTypeDescriptorReferenceType",
  "ProgramSponsorDescriptorReferenceType",
  "ProgramTypeDescriptorReferenceType",
  "ProgressDescriptorReferenceType",
  "ProgressLevelDescriptorReferenceType",
  "ProviderCategoryDescriptorReferenceType",
  "ProviderProfitabilityDescriptorReferenceType",
  "ProviderStatusDescriptorReferenceType",
  "PublicationStatusDescriptorReferenceType",
  "QuestionFormDescriptorReferenceType",
  "RaceDescriptorReferenceType",
  "RatingLevelDescriptorReferenceType",
  "ReasonExitedDescriptorReferenceType",
  "ReasonNotTestedDescriptorReferenceType",
  "RecognitionTypeDescriptorReferenceType",
  "RelationDescriptorReferenceType",
  "RepeatIdentifierDescriptorReferenceType",
  "ReporterDescriptionDescriptorReferenceType",
  "ReportingTagDescriptorReferenceType",
  "ResidencyStatusDescriptorReferenceType",
  "ResponseIndicatorDescriptorReferenceType",
  "ResponsibilityDescriptorReferenceType",
  "RestraintEventReasonDescriptorReferenceType",
  "ResultDatatypeTypeDescriptorReferenceType",
  "RetestIndicatorDescriptorReferenceType",
  "SchoolCategoryDescriptorReferenceType",
  "SchoolChoiceBasisDescriptorReferenceType",
  "SchoolChoiceImplementStatusDescriptorReferenceType",
  "SchoolFoodServiceProgramServiceDescriptorReferenceType",
  "SchoolTypeDescriptorReferenceType",
  "Section504DisabilityDescriptorReferenceType",
  "SectionCharacteristicDescriptorReferenceType",
  "SectionTypeDescriptorReferenceType",
  "SeparationDescriptorReferenceType",
  "SeparationReasonDescriptorReferenceType",
  "ServiceDescriptorReferenceType",
  "SexDescriptorReferenceType",
  "SourceSystemDescriptorReferenceType",
  "SpecialEducationExitReasonDescriptorReferenceType",
  "SpecialEducationProgramServiceDescriptorReferenceType",
  "SpecialEducationSettingDescriptorReferenceType",
  "StaffClassificationDescriptorReferenceType",
  "StaffIdentificationSystemDescriptorReferenceType",
  "StaffLeaveEventCategoryDescriptorReferenceType",
  "StateAbbreviationDescriptorReferenceType",
  "StudentCharacteristicDescriptorReferenceType",
  "StudentIdentificationSystemDescriptorReferenceType",
  "SubmissionStatusDescriptorReferenceType",
  "SupporterMilitaryConnectionDescriptorReferenceType",
  "SurveyCategoryDescriptorReferenceType",
  "SurveyLevelDescriptorReferenceType",
  "TeachingCredentialBasisDescriptorReferenceType",
  "TeachingCredentialDescriptorReferenceType",
  "TechnicalSkillsAssessmentDescriptorReferenceType",
  "TelephoneNumberTypeDescriptorReferenceType",
  "TermDescriptorReferenceType",
  "TitleIPartAParticipantDescriptorReferenceType",
  "TitleIPartAProgramServiceDescriptorReferenceType",
  "TitleIPartASchoolDesignationDescriptorReferenceType",
  "TransportationPublicExpenseEligibilityTypeDescriptorReferenceType",
  "TransportationTypeDescriptorReferenceType",
  "TravelDayofWeekDescriptorReferenceType",
  "TravelDirectionDescriptorReferenceType",
  "TribalAffiliationDescriptorReferenceType",
  "VisaDescriptorReferenceType",
  "WeaponDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "SchoolYearType",
  "===== String Simple Types =====",
  "AccountIdentifier",
  "AccountName",
  "AchievementCategorySystem",
  "AchievementTitle",
  "AddressLine",
  "AdministrationIdentifier",
  "AlternateDayName",
  "ApartmentRoomSuiteNumber",
  "AssessmentBatteryPartName",
  "AssessmentFamily",
  "AssessmentForm",
  "AssessmentResponse",
  "AssessmentTitle",
  "AttendanceEventReason",
  "Author",
  "BellScheduleName",
  "BirthInternationalProvince",
  "BuildingSiteNumber",
  "BusNumber",
  "CaseNumber",
  "CIPCode",
  "City",
  "ClassPeriodName",
  "ClassroomIdentificationCode",
  "Code",
  "CodeName",
  "CodeValue",
  "CohortDescription",
  "CohortIdentifier",
  "Comment",
  "CongressionalDistrict",
  "ContactRestrictions",
  "ContactTitle",
  "ContentIdentifier",
  "ContentStandardName",
  "ContentStandardTitle",
  "ContentStandardVersion",
  "ContentVersion",
  "Coordinate",
  "CountyFIPSCode",
  "CourseCatalogURL",
  "CourseSetName",
  "CourseTitle",
  "CredentialEndorsement",
  "CrisisEventName",
  "Criteria",
  "CustomizationKey",
  "CustomizationValue",
  "Department",
  "Description",
  "DescriptorReferenceType",
  "DesignatedBy",
  "DiagnosticStatement",
  "DiplomaDescription",
  "DisabilityDiagnosis",
  "DisciplineActionIdentifier",
  "DocumentTitle",
  "ElectronicMailAddress",
  "EvaluationLateReason",
  "ExternalEvaluator",
  "ExternalTerm",
  "FirstName",
  "FullName",
  "GenderIdentity",
  "GenerationCodeSuffix",
  "GradebookEntryIdentifier",
  "GradeEarned",
  "GradeEarnedDescription",
  "GradingPeriodName",
  "HonorDescription",
  "IdentificationCode",
  "ImmunizationName",
  "IncidentIdentifier",
  "Indicator",
  "IndicatorName",
  "IssuerName",
  "ItemText",
  "LastSurname",
  "LearningResourceMetadataURI",
  "LearningStandardEquivalenceStrengthDescription",
  "LearningStandardId",
  "LicenseIdentifier",
  "LicensingOrganization",
  "LocalCourseCode",
  "MappedValue",
  "MatrixElement",
  "MedicalExemption",
  "MiddleName",
  "NameOfCounty",
  "NameOfInstitution",
  "Nomenclature",
  "Objective",
  "PerformanceLevelIndicatorName",
  "PersonalTitlePrefix",
  "PositionTitle",
  "PostalCode",
  "ProfileThumbnail",
  "ProgramEvaluationDescription",
  "ProgramEvaluationElementTitle",
  "ProgramEvaluationObjectiveTitle",
  "ProgramEvaluationTitle",
  "ProgramId",
  "ProgramName",
  "Publisher",
  "Rating",
  "RatingOrganization",
  "RatingProgram",
  "RatingTitleType",
  "Reason",
  "RecognitionDescription",
  "ReporterName",
  "RequisitionNumber",
  "ResponseDescription",
  "ResponseValue",
  "RestraintEventIdentifier",
  "Result",
  "SchoolIdentifier",
  "SectionIdentifier",
  "SectionName",
  "ShortDescription",
  "SpecialAccomodationRequirements",
  "SpecialEducationExitExplained",
  "Statement",
  "StreetNumberName",
  "SurveySectionTitle",
  "SurveyTitle",
  "TagValue",
  "TelephoneNumber",
  "TextResponse",
  "TextValue",
  "TimeInterval",
  "Title",
  "UniqueId",
  "URI",
  "Value",
  "WeekIdentifier",
  "Whereabouts",
  "===== Numeric Simple Types =====",
  "AgeAuthorizedToServe",
  "AssessmentVersion",
  "AttendanceEventDuration",
  "Capacity",
  "CreditConversion",
  "CreditsValue",
  "Currency",
  "DisciplineActionLength",
  "Dosage",
  "Duration",
  "EvaluationDelayDays",
  "EventDuration",
  "FullTimeEquivalency",
  "GPA",
  "HoursAbsent",
  "HoursPerWeek",
  "Learning",
  "LocalFiscalYear",
  "MaxCompletionsForCredit",
  "MaxPoints",
  "MaxRawScore",
  "Mileage",
  "NumberOfDaysAbsent",
  "NumberOfDaysInAttendance",
  "NumberOfDaysTardy",
  "NumberOfParts",
  "NumberOfYears",
  "NumericGrade",
  "NumericRating",
  "NumericResponse",
  "NumericValue",
  "OrderOfPriority",
  "Percent",
  "RawScoreResult",
  "SectionRating",
  "SequenceOfCourse",
  "SortOrder",
  "TotalInstructionalDays",
  "TotalInstructionalTime",
  "===== Domain Entities =====",
  "===== Descriptors =====",
  "===== Associations =====",
  "===== Extended Reference Types =====",
  "===== Extended Descriptor Reference Types =====",
  "EdFiXFinance-AccountTypeDescriptorReferenceType",
  "EdFiXFinance-FinancialCollectionDescriptorReferenceType",
  "EdFiXFinance-ReportingTagDescriptorReferenceType",
  "===== Common Types =====",
  "===== Enumerations and Enumerated Collections =====",
  "===== String Simple Types =====",
  "EdFiXFinance-Code",
  "EdFiXFinance-CodeName",
  "EdFiXFinance-TagValue",
  "===== Numeric Simple Types =====",
  "EdFiXFinance-FiscalYear",
]
`;
